Elevate typography components and layout for premium modern UI

--- a/design-system.html
+++ b/design-system.html
@@ -6,7 +6,7 @@
   <title>Welfare Platform — Modern Design System</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
   <style>
     :root {
       --color-primary: #5B5BD6;
@@ -47,7 +47,7 @@
       margin: 0;
       min-height: 100vh;
       padding: 32px 24px 56px;
-      font-family: "Cairo", "Helvetica Neue", Arial, sans-serif;
+      font-family: "Plus Jakarta Sans", "Helvetica Neue", Arial, sans-serif;
       color: var(--color-text);
       background: var(--gradient-hero);
       -webkit-font-smoothing: antialiased;
@@ -136,7 +136,7 @@
       border: 0;
       border-radius: var(--radius-md);
       padding: 10px 16px;
-      font: 700 13px/1 "Cairo", sans-serif;
+      font: 700 13px/1 "Plus Jakarta Sans", sans-serif;
       cursor: pointer;
     }
 
@@ -222,7 +222,7 @@
         <div class="token-card"><h3>Body Copy</h3><p>14–16px, muted secondary text, avoid dense paragraphs.</p></div>
         <div class="token-card"><h3>Rhythm</h3><p>80–120px spacing between major sections; roomy cards and gutters.</p></div>
       </div>
-      <p class="guide">Typeface: Cairo (rounded geometric sans-serif) for modern fintech readability.</p>
+      <p class="guide">Typeface: Plus Jakarta Sans for modern fintech readability and cleaner hierarchy.</p>
     </section>
 
     <section>
